--- a/4.dan/TestProject/TestProject.WebApi/bin/TestProject.WebApi.dll.config
+++ b/4.dan/TestProject/TestProject.WebApi/bin/TestProject.WebApi.dll.config
@@ -5,7 +5,7 @@
   -->
 <configuration>
 	<connectionStrings>
-		<add name="Connection" connectionString="Server=tcp:msenk.database.windows.net,1433;Initial Catalog=Praksa;Persist Security Info=False;User ID=msenk;Password=7991Schnekec1997;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"/>
+		<add name="defcon" connectionString="Server=tcp:msenk.database.windows.net,1433;Initial Catalog=Praksa;Persist Security Info=False;User ID=msenk;Password=7991Schnekec1997;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"/>
 	</connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
