--- a/5.dan/TestProject/Repository/Repository.csproj
+++ b/5.dan/TestProject/Repository/Repository.csproj
@@ -70,6 +70,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FakultetRepository.cs" />
     <Compile Include="StudentRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
